--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ws-sniffer",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.43.4",
-    "@sparticuz/chromium": "^129.0.0",
-    "puppeteer-core": "^23.4.1"
+    "@supabase/supabase-js": "^2.45.2",
+    "node-fetch": "^3.3.2",
+    "ws": "^8.18.0"
   }
 }
