--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "ws-sniffer-stable",
-  "version": "4.3.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.2",
-    "node-fetch": "^3.3.2",
-    "express": "^4.21.1",
-    "ws": "^8.18.0"
+    "ws": "^8.13.0",
+    "node-fetch": "^2.6.7",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
